[gd_scene load_steps=7 format=3 uid="uid://bnf85sk0dv6hv"]

[ext_resource type="Script" path="res://scripts/mainmenu.gd" id="1_chjsi"]
[ext_resource type="Script" path="res://scripts/mainmenu_background.gd" id="2_l612g"]
[ext_resource type="LabelSettings" uid="uid://clnyd06yex24t" path="res://resources/label_setting/moreHud_rowI.tres" id="3_7o5s6"]
[ext_resource type="Script" path="res://scripts/changelog_display.gd" id="4_b6bmv"]
[ext_resource type="Environment" uid="uid://ciiv3lhelqrs0" path="res://resources/environment/2d_background_environment.tres" id="5_d7ykb"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_d8gso"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_chjsi")

[node name="Background" type="Node" parent="."]
script = ExtResource("2_l612g")

[node name="CheckButton" type="CheckButton" parent="."]
layout_mode = 0
offset_right = 130.0
offset_bottom = 31.0
text = "toggle test"

[node name="CheckButton2" type="Button" parent="."]
layout_mode = 0
offset_top = 30.925
offset_right = 130.0
offset_bottom = 61.925
text = "toggle test"

[node name="MenuBox" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -94.0
offset_top = -172.0
offset_right = 94.0
offset_bottom = 172.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="MenuBox" type="VBoxContainer" parent="MenuBox"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="Logo" type="TextureRect" parent="MenuBox/MenuBox"]
custom_minimum_size = Vector2(158, 40)
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_d8gso")
expand_mode = 1

[node name="New" type="Button" parent="MenuBox/MenuBox"]
layout_mode = 2
focus_mode = 0
text = "New"

[node name="HSeparator" type="HSeparator" parent="MenuBox/MenuBox"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Continue" type="Button" parent="MenuBox/MenuBox"]
layout_mode = 2
focus_mode = 0
text = "Continue"

[node name="Load" type="Button" parent="MenuBox/MenuBox"]
layout_mode = 2
focus_mode = 0
text = "Load"

[node name="Options" type="Button" parent="MenuBox/MenuBox"]
layout_mode = 2
focus_mode = 0
text = "Options"

[node name="Credits" type="Button" parent="MenuBox/MenuBox"]
layout_mode = 2
focus_mode = 0
text = "Credits"

[node name="Socials" type="Button" parent="MenuBox/MenuBox"]
layout_mode = 2
focus_mode = 0
text = "Socials
"

[node name="SwitchMenu" type="CheckButton" parent="MenuBox/MenuBox"]
layout_mode = 2
focus_mode = 0
text = "Slim Menu"

[node name="Quit" type="Button" parent="MenuBox/MenuBox"]
layout_mode = 2
focus_mode = 0
text = "Quit"

[node name="MenuMusicSettingsBox" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -172.0
offset_bottom = 79.0
grow_horizontal = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MenuMusicSettingsBox"]
layout_mode = 2
theme_override_constants/separation = -3

[node name="ToggleMusic" type="CheckButton" parent="MenuMusicSettingsBox/VBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Toggle Sound"

[node name="MusicVolume" type="SpinBox" parent="MenuMusicSettingsBox/VBoxContainer"]
layout_mode = 2
step = 10.0
alignment = 1
suffix = "dB"

[node name="IntroBox" type="MarginContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -232.0
offset_top = -40.0
offset_right = 232.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="IntroBox"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="Label" type="Label" parent="IntroBox/VBoxContainer"]
layout_mode = 2
text = "Would you like to play the game introduction?"
label_settings = ExtResource("3_7o5s6")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="IntroBox/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 50

[node name="Yes" type="Button" parent="IntroBox/VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Yes"

[node name="No" type="Button" parent="IntroBox/VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "No"

[node name="Back" type="Button" parent="IntroBox/VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 0
text = "Back"

[node name="FeedbackLinkBox" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -358.0
offset_top = -43.0
offset_right = 358.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="PanelContainer" type="PanelContainer" parent="FeedbackLinkBox"]
layout_mode = 2

[node name="LinkButton" type="LinkButton" parent="FeedbackLinkBox/PanelContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0.933333, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.172549, 0.403922, 1, 1)
action_mode = 0
text = "Please leave an honest review on Steam and / or send us feedback via the --Feedback-- tab"
underline = 2

[node name="ChangelogBox" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -62.0
offset_right = 242.0
grow_vertical = 0
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15
script = ExtResource("4_b6bmv")

[node name="PanelContainer" type="PanelContainer" parent="ChangelogBox"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ChangelogBox"]
layout_mode = 2
theme_override_constants/separation = 14

[node name="VersionLabel" type="Label" parent="ChangelogBox/VBoxContainer"]
layout_mode = 2
text = "Folklore -- Preview 0.0.1"
label_settings = ExtResource("3_7o5s6")
vertical_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="ChangelogBox/VBoxContainer"]
custom_minimum_size = Vector2(315, 700)
layout_direction = 3
layout_mode = 2
horizontal_scroll_mode = 3
vertical_scroll_mode = 2

[node name="ChangelogHistory" type="VBoxContainer" parent="ChangelogBox/VBoxContainer/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="ChangelogEntry" type="VBoxContainer" parent="ChangelogBox/VBoxContainer/ScrollContainer/ChangelogHistory"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="AutomaticDateLabel" type="Label" parent="ChangelogBox/VBoxContainer/ScrollContainer/ChangelogHistory/ChangelogEntry"]
layout_mode = 2
text = "DATE TEST 1"
horizontal_alignment = 2

[node name="RichTextLabel" type="RichTextLabel" parent="ChangelogBox/VBoxContainer/ScrollContainer/ChangelogHistory/ChangelogEntry"]
custom_minimum_size = Vector2(300, 0)
layout_direction = 2
layout_mode = 2
text = "aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa:Daaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
fit_content = true
scroll_active = false
threaded = true
text_direction = 1

[node name="ChangelogEntry2" type="VBoxContainer" parent="ChangelogBox/VBoxContainer/ScrollContainer/ChangelogHistory"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="AutomaticDateLabel" type="Label" parent="ChangelogBox/VBoxContainer/ScrollContainer/ChangelogHistory/ChangelogEntry2"]
layout_mode = 2
text = "DATE TEST 2"
horizontal_alignment = 2

[node name="RichTextLabel" type="RichTextLabel" parent="ChangelogBox/VBoxContainer/ScrollContainer/ChangelogHistory/ChangelogEntry2"]
custom_minimum_size = Vector2(300, 0)
layout_direction = 2
layout_mode = 2
text = "ttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttt
:D
"
fit_content = true
scroll_active = false
threaded = true
text_direction = 1

[node name="OptionsBox" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="PanelContainer" type="PanelContainer" parent="OptionsBox"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="OptionsBox/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 445

[node name="START" type="Control" parent="OptionsBox/PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="Video" type="Button" parent="OptionsBox/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Video"

[node name="Audio" type="Button" parent="OptionsBox/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Audio"

[node name="Controls" type="Button" parent="OptionsBox/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Controls"

[node name="GameSettings" type="Button" parent="OptionsBox/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "GameSettings"

[node name="Back" type="Button" parent="OptionsBox/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Back"

[node name="END" type="Control" parent="OptionsBox/PanelContainer/HBoxContainer"]
layout_mode = 2

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = ExtResource("5_d7ykb")

[connection signal="toggled" from="CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="pressed" from="CheckButton2" to="." method="_on_check_button_2_pressed"]
[connection signal="pressed" from="MenuBox/MenuBox/New" to="." method="_on_new_pressed"]
[connection signal="pressed" from="MenuBox/MenuBox/SwitchMenu" to="." method="_on_switch_menu_pressed"]
[connection signal="pressed" from="MenuBox/MenuBox/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="IntroBox/VBoxContainer/HBoxContainer/Yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="IntroBox/VBoxContainer/HBoxContainer/No" to="." method="_on_no_pressed"]
[connection signal="pressed" from="IntroBox/VBoxContainer/HBoxContainer/Back" to="." method="_on_back_pressed"]
